--- a/src/app/user/dashboard-admin/dashboard-admin.component.css
+++ b/src/app/user/dashboard-admin/dashboard-admin.component.css
@@ -32,6 +32,9 @@
     text-align: start;
     padding-left: 20px;
 }
+#lis h1{
+    margin-top: 40px;
+}
 
 #main{
     margin-top: 40px;
@@ -40,7 +43,9 @@
 #admi{
     font-size: 25px;
 }
-
+.col-6{
+    padding: 10px;
+}
 .cover-image__image2 {
     max-width: 50px;
     /* La imagen no será más ancha que el contenedor */
@@ -60,8 +65,12 @@
 }
 
 section{
-    border: 1px solid;
+    border-bottom: 1px solid;
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 20px;
+}
+
+.row{
+    display: flex;
 }
